# pgmq-hs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Justfile  README.md  cabal.project  cabal.project.freeze  flake.module.nix  flake.nix  mina.kdl  mori.dhall  pgmq-hs.cabal  process-compose.yaml  result-1
.github/workflows/: ci.yaml  client-tests.yml  crate_ci.yml  extension_upgrade.yml
.seihou/: manifest.json
agents/skills/exec-plan/: SKILL.md
agents/skills/release/: SKILL.md
claude/skills/: release.md
claude/skills/exec-plan/: SKILL.md  exec-plan
config/: postgresql-benchmark.conf
docs/: OPENTELEMETRY_INSTRUMENTATION.md  topics.md
docs/api/sql/: functions.md  types.md
docs/design/: 001-message-headers.md  002-queue-visible-length.md  003-conditional-read.md  004-pop-quantity.md  005-batch-set-vt.md  006-queue-notifications.md  007-deprecate-detach-archive.md  008-fifo-read.md  009-send-delay-null-handling.md  010-read-conditional-null-handling.md  011-pgmq-1.11.0-upgrade.md  012-vendor-upstream-pgmq-sql.md  013-pgmq-effectful-error-model.md
docs/masterplans/: 1-pgmq-effectful-error-propagation.md
docs/plans/: 1-pgmq-effectful-error-type.md  2-pgmq-effectful-traced-error-propagation.md  3-pgmq-effectful-error-api-surface.md  4-pgmq-effectful-error-tests.md  5-pgmq-effectful-error-docs.md  6-otel-semantic-conventions-v1-24.md  7-pgmq-config-idempotent-ensure-queues.md  8-upgrade-hs-opentelemetry-to-1-0-0.md  add-pgmq-config-package.md
docs/user/: queue-configuration.md
mori/: repo-id
nix/: haskell-overlay.nix  haskell.nix  pre-commit.nix  treefmt.nix
pgmq-bench/: README.md  pgmq-bench.cabal
pgmq-bench/bench/: BenchConfig.hs  BenchSetup.hs  Main.hs
pgmq-bench/bench/Bench/: Ack.hs  LayerComparison.hs  Read.hs  Send.hs  Throughput.hs
pgmq-config/: CHANGELOG.md  pgmq-config.cabal
pgmq-config/src/Pgmq/: Config.hs
pgmq-config/src/Pgmq/Config/: Effectful.hs  Types.hs
pgmq-config/test/: ConfigSpec.hs  EphemeralDb.hs  Main.hs
pgmq-core/: CHANGELOG.md  pgmq-core.cabal
pgmq-core/src/Pgmq/: Types.hs
pgmq-effectful/: CHANGELOG.md  LICENSE  pgmq-effectful.cabal
pgmq-effectful/src/Pgmq/: Effectful.hs
pgmq-effectful/src/Pgmq/Effectful/: Effect.hs  Interpreter.hs  Telemetry.hs  Traced.hs
pgmq-effectful/src/Pgmq/Effectful/Interpreter/: Traced.hs
pgmq-effectful/test/: ClassificationSpec.hs  EphemeralDb.hs  Main.hs  PlainInterpreterSpec.hs  TracedInterpreterSpec.hs
pgmq-extension/: Makefile
pgmq-extension/sql/: pgmq--1.5.1--1.5.2.sql  pgmq--1.7.1--1.8.0.sql  pgmq--1.8.1--1.9.0.sql  pgmq--1.9.0--1.10.0.sql
pgmq-extension/test/expected/: base.out  fifo_tests.out  topic_tests.out
pgmq-extension/test/sql/: base.sql
pgmq-hasql/: CHANGELOG.md  pgmq-hasql.cabal
pgmq-hasql/src/: Pgmq.hs
pgmq-hasql/src/Pgmq/Hasql/: Decoders.hs  Encoders.hs  Prelude.hs  Quasi.hs  Sessions.hs  Statements.hs
pgmq-hasql/src/Pgmq/Hasql/Statements/: Message.hs  QueueManagement.hs  QueueObservability.hs  TopicManagement.hs  Types.hs
pgmq-hasql/test/: AdvancedOpsSpec.hs  AllFunctionsDecoderSpec.hs  DecoderValidationSpec.hs  EphemeralDb.hs  Generators.hs  Main.hs  MessageSpec.hs  MetricsSpec.hs  QueueSpec.hs  RoundTripSpec.hs  SchemaSpec.hs  TestUtils.hs  TmpPostgres.hs  TopicSpec.hs
pgmq-migration/: CHANGELOG.md  pgmq-migration.cabal
pgmq-migration/database/migrations/: v1.10.0_to_v1.11.0.sql
pgmq-migration/database/v1.10.0/: 03_types.sql  04_core_functions.sql  05_queue_management.sql  08_partitioning.sql  09_notifications.sql
pgmq-migration/database/v1.11.0/: 02_tables.sql  06_message_ops.sql  09_notifications.sql  10_fifo.sql  11_topics.sql
pgmq-migration/database/v1.9.0/: 01_schema.sql  02_tables.sql  03_types.sql  05_queue_management.sql  06_message_ops.sql  07_metrics.sql  08_partitioning.sql  10_fifo.sql
pgmq-migration/src/Pgmq/: Migration.hs
pgmq-migration/src/Pgmq/Migration/: Migrations.hs  Sessions.hs  Statements.hs  Transactions.hs
pgmq-migration/src/Pgmq/Migration/Migrations/: V1_10_0.hs  V1_10_0_to_V1_10_1.hs  V1_10_0_to_V1_11_0.hs  V1_10_1_to_V1_11_0.hs  V1_11_0.hs  V1_9_0.hs  V1_9_0_to_V1_10_0.hs
pgmq-migration/test/: Main.hs
pgmq-rs/: README.md
pgmq-rs/examples/: basic.rs  install.rs
pgmq-rs/src/: lib.rs
src/: Pgmq.hs
src/Pgmq/: Prelude.hs  Quasi.hs  Types.hs
src/Pgmq/Db/: Decoders.hs  Encoders.hs  Sessions.hs  Statements.hs  Transactions.hs
src/Pgmq/Db/Statements/: Message.hs  QueueManagement.hs  QueueObservability.hs  Types.hs
test/: DbTesting.hs
