cabal-version:   3.4
name:            pgmq-hs
version:         0.1.0.0

-- synopsis:
-- description:
homepage:        https://github.com/topagentnetwork/pgmq-hs
license:         MIT
license-file:    LICENSE
author:          Nadeem Bitar
maintainer:      nadeem@topagentnetwork.com

-- copyright:
category:        Database
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:             warnings
  exposed-modules:
    Pgmq
    Pgmq.Prelude
    Pgmq.Types

  default-extensions:
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings

  build-depends:
    , aeson              ^>=2.2
    , base               >=4.18  && <5.0
    , hasql              ^>=1.9
    , hasql-transaction  ^>=1.2
    , lens               ^>=5.3
    , text               ^>=2.1
    , time               ^>=1.14
    , vector             ^>=0.13

  hs-source-dirs:     src
  default-language:   GHC2021

test-suite pgmq-hs-test
  import:           warnings
  default-language: GHC2021

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , aeson
    , base            >=4.18  && <5.0
    , hedgehog        ^>=1.5
    , lens
    , pgmq-hs
    , tasty           ^>=1.5
    , tasty-hedgehog  ^>=1.4
    , tasty-hspec     ^>=1.2
    , tasty-hunit     ^>=0.10
    , text
