cabal-version: 3.4
name:          pgmq-bench
version:       0.1.0.0
synopsis:      Benchmarks for pgmq-hs library
homepage:      https://github.com/topagentnetwork/pgmq-hs
license:       MIT
license-file:  LICENSE
author:        Nadeem Bitar
maintainer:    Nadeem Bitar
category:      Database
build-type:    Simple

common warnings
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wmissing-export-lists -Wpartial-fields
    -Wmissing-deriving-strategies

benchmark pgmq-bench
  import:             warnings
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     bench
  default-language:   GHC2024
  ghc-options:        -O2 -threaded -rtsopts -with-rtsopts=-N
  other-modules:
    Bench.Ack
    Bench.LayerComparison
    Bench.Read
    Bench.Send
    Bench.Throughput
    BenchConfig
    BenchSetup

  default-extensions:
    DuplicateRecordFields
    ImportQualifiedPost
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards

  build-depends:
    , aeson           ^>=2.2
    , base            >=4.18  && <5.0
    , bytestring      >=0.11  && <0.13
    , effectful-core  ^>=2.5  || ^>=2.6
    , hasql           ^>=1.10
    , hasql-pool      ^>=1.4
    , pgmq-core
    , pgmq-effectful
    , pgmq-hasql
    , pgmq-migration
    , random          ^>=1.2  || ^>=1.3
    , tasty-bench     ^>=0.4
    , text            ^>=2.1
    , vector          ^>=0.13
