cabal-version: 3.4
name:          pgmq-core
version:       0.1.0.0

-- synopsis:
-- description:
homepage:      https://github.com/topagentnetwork/pgmq-hs
license:       MIT
license-file:  LICENSE
author:        Nadeem Bitar
maintainer:    nadeem@topagentnetwork.com

-- copyright:
category:      Database
build-type:    Simple

-- extra-source-files:

common warnings
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wmissing-export-lists -Wpartial-fields
    -Wmissing-deriving-strategies

library
  import:             warnings
  exposed-modules:    Pgmq.Types
  default-extensions:
    DeriveGeneric
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    OverloadedStrings

  build-depends:
    , aeson             ^>=2.2
    , base              >=4.18  && <5.0
    , template-haskell  >=2.20  && <3
    , text              ^>=2.1
    , time              ^>=1.14

  hs-source-dirs:     src
  default-language:   GHC2024
