cabal-version: 3.4
name:          pgmq-effectful
version:       0.1.0.0

-- synopsis:
-- description:
homepage:      https://github.com/topagentnetwork/pgmq-hs
license:       MIT
license-file:  LICENSE
author:        Nadeem Bitar
maintainer:    nadeem@topagentnetwork.com

-- copyright:
category:      Database
build-type:    Simple

-- extra-source-files:

common warnings
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wmissing-export-lists -Wpartial-fields
    -Wmissing-deriving-strategies

library
  import:             warnings
  exposed-modules:
    Pgmq.Effectful
    Pgmq.Effectful.Effect
    Pgmq.Effectful.Interpreter
    Pgmq.Effectful.Interpreter.Traced
    Pgmq.Effectful.Telemetry
    Pgmq.Effectful.Traced

  default-extensions:
    DataKinds
    DuplicateRecordFields
    GADTs
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    NoFieldSelectors
    OverloadedRecordDot
    OverloadedStrings
    TypeFamilies
    TypeOperators

  build-depends:
    , aeson                            >=2.0   && <2.3
    , base                             >=4.18  && <5.0
    , bytestring                       >=0.11  && <0.13
    , effectful-core                   ^>=2.5  || ^>=2.6
    , hasql                            ^>=1.9
    , hasql-pool                       ^>=1.3
    , hs-opentelemetry-api             >=0.2   && <0.4
    , hs-opentelemetry-propagator-w3c  >=0.0   && <0.2
    , pgmq-core
    , pgmq-hasql
    , text                             >=2.0   && <2.2
    , unliftio                         >=0.2   && <0.3
    , unordered-containers             >=0.2   && <0.3
    , vector                           ^>=0.13

  hs-source-dirs:     src
  default-language:   GHC2024
