cabal-version:   3.4
name:            pgmq-hasql
version:         0.1.0.0

-- synopsis:
-- description:
homepage:        https://github.com/topagentnetwork/pgmq-hs
license:         MIT
license-file:    LICENSE
author:          Nadeem Bitar
maintainer:      nadeem@topagentnetwork.com

-- copyright:
category:        Database
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wmissing-export-lists -Wpartial-fields
    -Wmissing-deriving-strategies

library
  import:             warnings
  exposed-modules:
    Pgmq
    Pgmq.Hasql.Decoders
    Pgmq.Hasql.Encoders
    Pgmq.Hasql.Prelude
    Pgmq.Hasql.Quasi
    Pgmq.Hasql.Sessions
    Pgmq.Hasql.Statements
    Pgmq.Hasql.Statements.Message
    Pgmq.Hasql.Statements.QueueManagement
    Pgmq.Hasql.Statements.QueueObservability
    Pgmq.Hasql.Statements.Types

  default-extensions:
    DeriveGeneric
    DuplicateRecordFields
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings

  build-depends:
    , aeson              ^>=2.2
    , base               >=4.18  && <5.0
    , generic-lens       ^>=2.2
    , hasql              ^>=1.9
    , hasql-transaction  ^>=1.2
    , lens               ^>=5.3
    , pgmq-core
    , template-haskell   >=2.20  && <3
    , text               ^>=2.1
    , time               ^>=1.14
    , tmp-postgres
    , vector             ^>=0.13

  hs-source-dirs:     src
  default-language:   GHC2024

test-suite pgmq-hasql-test
  import:           warnings
  default-language: GHC2024
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  other-modules:    DbTesting
  build-depends:
    , aeson
    , base                 >=4.18  && <5.0
    , bytestring           ^>=0.12
    , filepath             ^>=1.5
    , hasql
    , hasql-pool           ^>=1.3
    , hasql-transaction
    , hedgehog             ^>=1.5
    , lens
    , pgmq-core
    , pgmq-hasql
    , tan-commons-testing
    , tasty                ^>=1.5
    , tasty-hedgehog       ^>=1.4
    , tasty-hspec          ^>=1.2
    , tasty-hunit          ^>=0.10
    , text
    , tmp-postgres
