cabal-version:      3.4
name:               pgmq-migration
version:            0.1.0.0
synopsis:           PGMQ schema migrations without PostgreSQL extension
description:
  Installs the PGMQ schema into PostgreSQL without requiring the pgmq extension.
  Uses hasql-migration for tracking applied migrations.

homepage:           https://github.com/topagentnetwork/pgmq-hs
license:            MIT
license-file:       LICENSE
author:             Nadeem Bitar
maintainer:         nadeem@topagentnetwork.com
category:           Database
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files: database/**/*.sql

common warnings
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wmissing-export-lists -Wpartial-fields
    -Wmissing-deriving-strategies

library
  import:             warnings
  exposed-modules:
    Pgmq.Migration
    Pgmq.Migration.Migrations
    Pgmq.Migration.Migrations.V1_10_0
    Pgmq.Migration.Migrations.V1_9_0
    Pgmq.Migration.Sessions
    Pgmq.Migration.Statements
    Pgmq.Migration.Transactions

  default-extensions:
    ImportQualifiedPost
    OverloadedStrings

  build-depends:
    , base               >=4.18    && <5.0
    , bytestring         ^>=0.12
    , file-embed         ^>=0.0.16
    , hasql              ^>=1.9
    , hasql-migration    ^>=0.3
    , hasql-transaction  ^>=1.2
    , text               ^>=2.1
    , transformers       ^>=0.6

  hs-source-dirs:     src
  default-language:   GHC2024

test-suite pgmq-migration-test
  import:           warnings
  default-language: GHC2024
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base               >=4.18  && <5.0
    , bytestring         ^>=0.12
    , hasql
    , hasql-migration
    , hasql-pool         ^>=1.3
    , hasql-transaction
    , pgmq-migration
    , tasty              ^>=1.5
    , tasty-hunit        ^>=0.10
    , text               ^>=2.1
    , tmp-postgres
